# cis194

./: .gitignore  Haskeleton.hs  LICENSE.md  Makefile  README.md  cis194.cabal  hw04.hs
benchmark/: Bench.hs  Cis194Bench.hs
executable/: Main.hs
hw02/: LogAnalysis.hs
hw03/: Golf.hs
hw05/: Calc.hs
hw06/: Fibonacci.hs
hw07/: JoinList.hs  Scrabble.hs
hw08/: Party.hs
old/: hw01.hs  hw04.hs
old/hw03/: Golf.hs
old/hw05/: Calc.hs
old/hw07/: Scrabble.hs
old/hw08/: Party.hs
old/hw10/: AParser.hs
test-suite/: Cis194Spec.hs  HPC.hs
test-suite/Cis194/Spring13/: HW01Spec.hs  HW02Spec.hs  HW03Spec.hs  HW04Spec.hs  HW10Spec.hs  HW11Spec.hs
