author:
    Tyler Langlois
build-type:
    Simple
cabal-version:
    >= 1.10
category:
    Education
copyright:
    2015 Tyler Langlois <tjl@byu.net>
description:
    Exercises from Yorgey's CIS 194 FP course.
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
license-file:
    LICENSE.md
license:
    MIT
maintainer:
    tjl@byu.net
name:
    cis194
synopsis:
    Contains exercises from the CIS 194 course broken into homework weeks.
tested-with:
    GHC == 7.8
  , GHC == 7.6
version:
    0.0.1

library
    build-depends:
        base ==4.*
    default-language:
        Haskell2010
    exposed-modules:
        Cis194
    ghc-options:
        -Wall
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        library

executable cis194
    build-depends:
        base
      , cis194
    default-language:
        Haskell2010
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        executable
    main-is:
        Main.hs

test-suite tests
    build-depends:
        base
      , cis194
      , hspec ==2.*
        , HUnit
        , QuickCheck
    default-language:
        Haskell2010
    ghc-options:
        -fhpc
        -Wall
        -Werror
    hs-source-dirs:
        library
        test-suite
    main-is:
        Spec.hs
    other-modules:
        Cis194
        -- HASKELETON: New.Module
        Cis194Spec
        -- HASKELETON: New.ModuleSpec
    type:
        exitcode-stdio-1.0

test-suite examples
    build-depends:
        base
      , Glob ==0.7.*
      , doctest ==0.9.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        DocTest.hs
    type:
        exitcode-stdio-1.0

test-suite coverage
    build-depends:
        base
      , directory ==1.*
      , process ==1.*
      , regex-compat >=0.90
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HPC.hs
    type:
        exitcode-stdio-1.0

test-suite documentation
    build-depends:
        base
      , process
      , regex-compat
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        Haddock.hs
    type:
        exitcode-stdio-1.0

test-suite style
    build-depends:
        base
      , hlint ==1.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HLint.hs
    type:
        exitcode-stdio-1.0

benchmark benchmarks
    build-depends:
        base
      , cis194
    if impl(ghc >=7.8)
        build-depends:
            criterion ==1.*
    if impl(ghc <7.8)
        build-depends:
            criterion ==0.6.*
            , hastache <0.6
            , statistics <0.11
    default-language:
        Haskell2010
    hs-source-dirs:
        benchmark
    main-is:
        Bench.hs
    type:
        exitcode-stdio-1.0
